--- a/build-automation/requirements.txt
+++ b/build-automation/requirements.txt
@@ -1,10 +1,9 @@
 cycler==0.10.0
-GDAL==3.0.4
+GDAL~=3.0.4
 kiwisolver==1.3.1
 matplotlib==3.1.2
-numpy==1.19.5
+numpy~=1.17.4
 Pillow==8.1.2
-pycairo==1.20.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 six==1.15.0
