meow-56 Git LFS removed
* All files used for tests are deleted from
  Git LFS attributes and is replaced by a
  custom mechanism management.
* One needs to manage 'resources' folder in
  the root of the repo with simple '.alus-lfs'
  script. There is option '--clean' to
  delete files that are not needed.
* Resources folder is not automatically managed
  by Git. Although when running tests any
  missing files are automatically downloaded
  if not present.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ find_package(Eigen3 REQUIRED)
 
 set(ALUS_BINARY_OUTPUT_DIR ${PROJECT_BINARY_DIR}/alus_package)
 set(ALUS_UNIT_TEST_BINARY_OUTPUT_DIR ${PROJECT_BINARY_DIR}/unit-test)
+set(ALUS_LFS_INVOKE ${CMAKE_CURRENT_LIST_DIR}/.alus-lfs)
+set(ALUS_LFS_GOODS ${CMAKE_CURRENT_LIST_DIR}/resources)
 
 option(ENABLE_TESTS "Enable tests" OFF)
 
