--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -107,10 +107,9 @@ pipelines:
                 - tar -czvf ${build_package_name}.tar.gz $build_package_name
               artifacts:
                 - build-nightly/*.tar.gz
-                - build-automation/execute_nightly.sh
-                - build-automation/run_beirut_disaster_test.sh
-                - build-automation/run_virumaa_calibration_chain_test.sh
+                - build-automation/*.sh
                 - build-automation/*.py
+                - build-automation/*.txt
       - step:
           name: 'End to end tests and publish'
           image: cgialus/alus-ci:latest
@@ -125,21 +124,21 @@ pipelines:
             - echo "aws_secret_access_key = $SID_MAN_SECRET_ACCESS_KEY" >> config
             - echo "region = eu-west-1" >> config
             - echo "output = json" >> config
-            - aws ec2 start-instances --instance-ids $P3_2X_LARGE_IRELAND_INSTANCE_ID --profile sid_man
+            - aws ec2 start-instances --instance-ids $NIGHTLY_INSTANCE_ID --profile sid_man
             - sleep 60
-            - ip_address=$(aws ec2 describe-instances --instance-ids $P3_2X_LARGE_IRELAND_INSTANCE_ID --profile sid_man | grep PublicDnsName | head -1 | awk -F'[:]' '{print $2}' | xargs)
+            - ip_address=$(aws ec2 describe-instances --instance-ids $NIGHTLY_INSTANCE_ID --profile sid_man | grep PublicDnsName | head -1 | awk -F'[:]' '{print $2}' | xargs)
             - ip_address=${ip_address%?}
             - echo $ip_address
             - cd $BITBUCKET_CLONE_DIR
             - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "mkdir /tmp/nightly_builds"
-            - scp -oStrictHostKeyChecking=no build-automation/execute_nightly.sh build-automation/run_beirut_disaster_test.sh build-automation/*.py build-automation/run_virumaa_calibration_chain_test.sh ubuntu@$ip_address:/tmp/nightly_builds
+            - scp -oStrictHostKeyChecking=no build-automation/*.py build-automation/*.sh build-automation/*.txt ubuntu@$ip_address:/tmp/nightly_builds
             - cd build-nightly
             - build_filename=$(basename *.tar.gz)
             - build_id="${build_filename%%.*}"
             - scp -r -oStrictHostKeyChecking=no *.tar.gz ubuntu@$ip_address:/tmp/nightly_builds
-            - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "export NIGHTLY_GOLDEN_DIR=$NIGHTLY_GOLDEN_DIR; cd /tmp/nightly_builds; ./execute_nightly.sh ${build_id} /home/ubuntu/nightly_datasets/beirut_dimap/ /home/ubuntu/nightly_aux/ /home/ubuntu/nightly_datasets/virumaa/"
+            - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "export NIGHTLY_GOLDEN_DIR=$NIGHTLY_GOLDEN_DIR; cd /tmp/nightly_builds; ./execute_nightly.sh ${build_id} nightly_resources.txt tarmo"
           after-script:
-            - aws ec2 stop-instances --instance-ids $P3_2X_LARGE_IRELAND_INSTANCE_ID --profile sid_man
+            - aws ec2 stop-instances --instance-ids $NIGHTLY_INSTANCE_ID --profile sid_man
     nightly-binary-check: # Duplicate of nightly-build except no CI check
       - step:
           name: 'Build Alus release package'
@@ -163,10 +162,9 @@ pipelines:
             - tar -czvf ${build_package_name}.tar.gz $build_package_name
           artifacts:
             - build-nightly/*.tar.gz
-            - build-automation/execute_nightly.sh
-            - build-automation/run_beirut_disaster_test.sh
-            - build-automation/run_virumaa_calibration_chain_test.sh
+            - build-automation/*.sh
             - build-automation/*.py
+            - build-automation/*.txt
       - step:
           name: 'End to end tests and publish'
           image: cgialus/alus-ci:latest
@@ -181,19 +179,19 @@ pipelines:
             - echo "aws_secret_access_key = $SID_MAN_SECRET_ACCESS_KEY" >> config
             - echo "region = eu-west-1" >> config
             - echo "output = json" >> config
-            - aws ec2 start-instances --instance-ids $P3_2X_LARGE_IRELAND_INSTANCE_ID --profile sid_man
+            - aws ec2 start-instances --instance-ids $NIGHTLY_INSTANCE_ID --profile sid_man
             - sleep 60
-            - ip_address=$(aws ec2 describe-instances --instance-ids $P3_2X_LARGE_IRELAND_INSTANCE_ID --profile sid_man | grep PublicDnsName | head -1 | awk -F'[:]' '{print $2}' | xargs)
+            - ip_address=$(aws ec2 describe-instances --instance-ids $NIGHTLY_INSTANCE_ID --profile sid_man | grep PublicDnsName | head -1 | awk -F'[:]' '{print $2}' | xargs)
             - ip_address=${ip_address%?}
             - echo $ip_address
             - cd $BITBUCKET_CLONE_DIR
             - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "mkdir /tmp/nightly_builds"
-            - scp -oStrictHostKeyChecking=no build-automation/execute_nightly.sh build-automation/run_beirut_disaster_test.sh build-automation/*.py build-automation/run_virumaa_calibration_chain_test.sh ubuntu@$ip_address:/tmp/nightly_builds
+            - scp -oStrictHostKeyChecking=no build-automation/*.py build-automation/*.sh build-automation/*.txt ubuntu@$ip_address:/tmp/nightly_builds
             - cd build-nightly
             - build_filename=$(basename *.tar.gz)
             - build_id="${build_filename%%.*}"
             - scp -r -oStrictHostKeyChecking=no *.tar.gz ubuntu@$ip_address:/tmp/nightly_builds
-            - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "export NIGHTLY_GOLDEN_DIR=$NIGHTLY_GOLDEN_DIR; cd /tmp/nightly_builds; ./execute_nightly.sh ${build_id} /home/ubuntu/nightly_datasets/beirut_dimap/ /home/ubuntu/nightly_aux/ /home/ubuntu/nightly_datasets/virumaa/"
+            - ssh -oStrictHostKeyChecking=no ubuntu@$ip_address "export NIGHTLY_GOLDEN_DIR=$NIGHTLY_GOLDEN_DIR; cd /tmp/nightly_builds; ./execute_nightly.sh ${build_id} nightly_resources.txt tarmo"
           after-script:
-            - aws ec2 stop-instances --instance-ids $P3_2X_LARGE_IRELAND_INSTANCE_ID --profile sid_man
+            - aws ec2 stop-instances --instance-ids $NIGHTLY_INSTANCE_ID --profile sid_man
 
