meow-50 Unnecessary shared libs and target configurations removed

--- a/algs/apply-orbit-file-op/CMakeLists.txt
+++ b/algs/apply-orbit-file-op/CMakeLists.txt
@@ -5,16 +5,13 @@ list(APPEND APPLY_ORBIT_FILE_OP_SOURCES
 
 list(APPEND APPLY_ORBIT_FILE_OP_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include
-        ${CMAKE_CURRENT_LIST_DIR}/../algorithm_bond/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../app/include
         #      SENTINEL1
         ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1/
-        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1//io/orbits/sentinel1
-        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1//jlinda-core
-        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1//s1tbx-io/sentinel1
-        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1//s1tbx-commons/io
+        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1/io/orbits/sentinel1
+        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1/jlinda-core
+        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1/s1tbx-io/sentinel1
+        ${CMAKE_CURRENT_LIST_DIR}/../../sentinel1/s1tbx-commons/io
         #      SNAP-ENGINE
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine
         ${CMAKE_CURRENT_LIST_DIR}/../../snap-engine/ceres-core
         ${CMAKE_CURRENT_LIST_DIR}/../../snap-engine/snap-core/datamodel
         ${CMAKE_CURRENT_LIST_DIR}/../../snap-engine/snap-core/dataio
@@ -26,8 +23,6 @@ list(APPEND APPLY_ORBIT_FILE_OP_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../snap-engine/snap-engine-utilities/datamodel
         #      OTHER
         ${CMAKE_CURRENT_LIST_DIR}/../../external/pugixml/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../common/include
         )
 
 add_library(apply-orbit-file-op-static
@@ -47,7 +42,7 @@ target_link_libraries(apply-orbit-file-op-static
         gdal
         snap-engine-static
         sentinel1-util-static
-        exotic_operations-static
+        exotic-operations-static
         pugixml-static
         common-util-static
         )
