meow-55 Version 0.7 release
* Updated PERFORMANCE.md and coh_nvvp.png with latest development result
* Fix segfault on help message and/or fast argument error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
-project(aluserer
+project(ALUs
         LANGUAGES CXX CUDA
-        DESCRIPTION "Geospatial algorithms on steroids."
-        VERSION 0.5.0
+        DESCRIPTION "Parallel ALUs for geospatial data processing"
+        VERSION 0.7.0
         )
 
 set(CMAKE_CUDA_STANDARD 14)
