meow-33: zip files general support
* Implemented support for zipped SAFE, DEM, and orbit files
* Updated error and information messages
* Updated automation scripts
* Updated pipelines
* Updated nightly scripts to test for zipped files as well

--- a/algs/topsar_split/CMakeLists.txt
+++ b/algs/topsar_split/CMakeLists.txt
@@ -30,4 +30,5 @@ target_link_libraries(topsar-split-static
         sentinel1-util-static
         snap-engine-static
         common-util-static
+        staticZipper
         )
