--- a/util/common/CMakeLists.txt
+++ b/util/common/CMakeLists.txt
@@ -23,5 +23,6 @@ target_link_libraries(common-util-static
         PUBLIC
         Boost::log
         Boost::log_setup
+        staticZipper
         )
 
