--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/zipper"]
 	path = external/zipper
-	url = https://github.com/sebastiandev/zipper.git
+	url = https://github.com/svenKautlenbach/zipper
