bulpp-77 Gabor filter bank generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ add_subdirectory(algs/coherence_cuda)
 add_subdirectory(algs/range_doppler_terrain_correction)
 add_subdirectory(algs/backgeocoding)
 add_subdirectory(algs/apply-orbit-file-op)
+add_subdirectory(algs/feature_extraction_gabor)
 add_subdirectory(algs/sentinel1_calibrate)
 add_subdirectory(algs/topsar-deburst-op)
 add_subdirectory(algs/coherence_estimation_routine)
